load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Mocks",
    srcs = [
        "MockKeychain.swift",
        "MockSecurityProvider.swift",
        "MockURLProvider.swift",
    ],
    module_name = "Mocks",
    visibility = ["//visibility:public"],
    deps = ["//Sources/SecurityTypes"],
)
